<resources>
    <string name="app_name">Aplikacja kontrolna</string>
    <string name="btn_cfg">Konfiguracja</string>
    <string name="cfg_name">Ustawienia konfiguracyjne</string>
    <string name="btn_open">Otwórz</string>
    <string name="btn_close">Zamknij</string>
    <string name="btn_setPerValue">Otwórz na zadany procent</string>
    <string name="btn_autoA">Automat</string>
    <string name="btn_settings">Ustawienia</string>
    <string name="login_name">Logowanie</string>
    <string name="btn_login">Zaloguj</string>
    <string name="txt_pass">Hasło</string>
    <string name="hint_pass">Wpisz hasło</string>
    <string name="messageF">Niepoprawe hasło!</string>
    <string name="messageP">Zalogowano</string>
    <string name="messageA">Logowanie</string>
    <string name="messageT">Przekroczono limit czasu oczekiwania.</string>
    <string name="messageNC">Urządzenie nie jest podłączone do właściwej sieci</string>
    <string name="btn_autoM">Ręczny</string>
    <string name="btn_toogle">ToggleButton</string>
    <string name="messageWiFi">Sieć WiFi nie połączona</string>
    <string name="messageDisconnected">Rozłączono z siecią</string>
    <string name="btn_perc_cfg">Zarządzaj dozwolonymi rozwarciami</string>
    <string name="btn_auto_cfg">Ustawienia trybu auto</string>
    <string name="percent_name">Otwarcie na zadaną wartość</string>
    <string name="btn_add_value">Dodaj wartość</string>
    <string name="message_command_send">Otwieranie przesłony na</string>
    <string name="timetable_hint_time">Czas</string>
    <string name="timetable_hint_number">Wartość</string>
    <string name="timetable_name">Ustawienia trybu automatycznego</string>
    <string name="btn_set_time">Ustaw czas</string>
    <string-array name="spinner_days">
        <item>Poniedziałek</item>
        <item>Wtorek</item>
        <item>Środa</item>
        <item>Czwartek</item>
        <item>Piątek</item>
        <item>Sobota</item>
        <item>Niedziela</item>
    </string-array>
    <string name="messageAlreadyDefined">Wartość dla zadanego momentu została już zdefiniowana</string>
</resources>
